--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,18 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Optional: data artifacts
+*.h5
+*.h5ad
+*.zarr
+*.zip
+
