--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,253 +1,3 @@
-absl-py==2.3.0
-adjustText==1.3.0
-aiobotocore==2.5.4
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aioitertools==0.12.0
-aiosignal==1.3.2
-anndata==0.10.5.post1
-anyio==4.9.0
-anywidget==0.9.21
-appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-array_api_compat==1.11.2
-arrow==1.3.0
-asciitree==0.3.3
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-async-timeout==5.0.1
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-biom_format==2.1.17
-bleach==6.2.0
-bokeh==3.4.3
-botocore==1.31.17
-cachetools==5.5.2
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-cloudpickle==3.1.1
-colorcet==3.1.0
-comm==0.2.2
-contourpy==1.2.1
-custom-inherit==2.4.1
-cycler==0.12.1
-dask==2024.8.0
-dask-expr==1.1.10
-dask-image==2024.5.3
-datashader==0.17.0
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-distributed==2024.8.0
-docrep==0.3.2
-et_xmlfile==2.0.0
-ete3==3.1.3
-exceptiongroup==1.3.0
-executing==2.2.0
-fasteners==0.19
-fastjsonschema==2.21.1
-flatbuffers==25.2.10
-fonttools==4.58.4
-fqdn==1.5.1
-frozenlist==1.7.0
-fsspec==2023.6.0
-gast==0.4.0
-geopandas==1.0.1
-get-annotations==0.1.2
-google-auth==2.40.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.73.0
-h11==0.16.0
-h5py==3.14.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-igraph==0.11.9
-imageio==2.37.0
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-inflect==7.5.0
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.8
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.1
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keras==2.11.0
-kiwisolver==1.4.7
-lazy_loader==0.4
-legacy-api-wrap==1.4.1
-leidenalg==0.10.2
-libclang==18.1.1
-llvmlite==0.41.1
-locket==1.0.0
-loguru==0.7.3
-louvain==0.8.2
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-matplotlib-scalebar==0.9.0
-mdurl==0.1.2
-mistune==3.1.3
-ml-dtypes==0.3.2
-more-itertools==10.7.0
-msgpack==1.1.1
-multidict==6.5.0
-multipledispatch==1.0.0
-multiscale_spatial_image==1.0.1
-namex==0.1.0
-narwhals==2.14.0
-natsort==8.4.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.4.3
-notebook_shim==0.2.4
-numba==0.58.0
-numcodecs==0.12.1
-numpy==1.25.2
-oauthlib==3.3.1
-ome-zarr==0.10.2
-omnipath==1.0.10
-opencv-python==4.12.0.88
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.16.0
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.0
-pandocfilters==1.5.1
-param==2.2.1
-parso==0.8.4
-partd==1.4.2
-patsy==1.0.1
-pexpect==4.9.0
-pillow==11.2.1
-PIMS==0.7
-platformdirs==4.3.8
-plotly==6.5.0
-pooch==1.8.2
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-propcache==0.3.2
-protobuf==3.19.6
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pyct==0.5.0
-Pygments==2.19.2
-pynndescent==0.5.13
-pyogrio==0.11.0
-pyparsing==3.2.3
-pypng==0.20220715.0
-pyproj==3.6.1
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-pytz==2025.2
-PyWavelets==1.4.1
-PyYAML==6.0.2
-pyzmq==27.0.0
-referencing==0.36.2
-reportlab==4.4.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-s3fs==2023.6.0
-scanpy==1.9.8
-scikit-bio==0.7.0
-scikit-image==0.21.0
-scikit-learn==1.6.1
-scipy==1.11.4
-seaborn==0.13.2
-Send2Trash==1.8.3
-session_info==1.0.1
-shapely==2.0.7
-six==1.17.0
-slicerator==1.1.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-spatial_image==1.1.0
-spatialdata==0.2.5.post0
-squidpy==1.6.1
-stack-data==0.6.3
-statsmodels==0.14.1
-stdlib-list==0.11.1
-stlearn==0.4.12
-tblib==3.1.0
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.1
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==3.1.0
-terminado==0.18.1
-texttable==1.7.0
-threadpoolctl==3.6.0
-tifffile==2024.8.30
-tinycss2==1.4.0
-tomli==2.2.1
-toolz==1.0.0
-tornado==6.5.1
-toyplot==2.0.0
-toytree==3.0.11
-tqdm==4.67.1
-traitlets==5.14.3
-typeguard==4.4.4
-types-python-dateutil==2.9.0.20250516
-typing_extensions==4.14.0
-tzdata==2025.2
-umap-learn==0.5.7
-uri-template==1.3.0
-urllib3==1.26.20
-validators==0.35.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wrapt==1.17.2
-xarray==2024.7.0
-xarray-dataclasses==1.9.1
-xarray-datatree==0.0.15
-xarray-schema==0.0.3
-xarray-spatial==0.4.0
-xyzservices==2025.4.0
-yarl==1.20.1
-zarr==2.18.2
-zict==3.0.0
-zipp==3.23.0
+mkdocs
+mkdocs-material
+
