--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-isite_name: SpatialCompassV(SCOMV)
+site_name: SpatialCompassV(SCOMV)
 site_description: SpatialCompassV(SCOMV)
 site_author: Ryosuke Nomura
 
