--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ site_author: Ryosuke Nomura
 theme:
   name: material
   language: en
+  logo: assets/logo.png
   features:
     - navigation.expand
     - navigation.sections
