--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   language: en
   logo: assets/logo.png
   features:
+　　- toc.integrate
     - navigation.expand
     - navigation.sections
     - navigation.instant
