--- a/requirements.txt
+++ b/requirements.txt
@@ -23,13 +23,11 @@ babel==2.17.0
 beautifulsoup4==4.13.4
 biom_format==2.1.17
 bleach==6.2.0
-bokeh==3.4.3
 botocore==1.31.17
 cachetools==5.5.2
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
-click==8.1.8
 cloudpickle==3.1.1
 colorcet==3.1.0
 comm==0.2.2
@@ -94,7 +92,8 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.4.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
-keras==2.11.0
+#keras==2.11.0
+#keras==2.14.0
 kiwisolver==1.4.7
 lazy_loader==0.4
 legacy-api-wrap==1.4.1
@@ -128,13 +127,14 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook==7.4.3
 notebook_shim==0.2.4
-numba==0.58.0
+numba==0.58.1
 numcodecs==0.12.1
-numpy==1.25.2
+#numpy==1.25.2
+numpy==1.26.4
 oauthlib==3.3.1
 ome-zarr==0.10.2
 omnipath==1.0.10
-opencv-python==4.12.0.88
+opencv-python<4.12
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.16.0
@@ -155,7 +155,7 @@ pooch==1.8.2
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 propcache==0.3.2
-protobuf==3.19.6
+#protobuf==3.19.6
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -186,10 +186,13 @@ rich==14.0.0
 rpds-py==0.25.1
 rsa==4.9.1
 s3fs==2023.6.0
-scanpy==1.9.8
+#scanpy==1.9.8
+scanpy==1.11.3
 scikit-bio==0.7.0
-scikit-image==0.21.0
-scikit-learn==1.6.1
+#scikit-image==0.21.0
+scikit-image>=0.22,<0.23
+#scikit-learn==1.6.1
+scikit-learn>=1.7,<2
 scipy==1.11.4
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -204,16 +207,10 @@ spatial_image==1.1.0
 spatialdata==0.2.5.post0
 squidpy==1.6.1
 stack-data==0.6.3
-statsmodels==0.14.1
 stdlib-list==0.11.1
-stlearn==0.4.12
+stlearn==1.2.2
 tblib==3.1.0
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.1
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.37.1
+tensorflow>=2.13
 termcolor==3.1.0
 terminado==0.18.1
 texttable==1.7.0
@@ -240,7 +237,6 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
-wrapt==1.17.2
 xarray==2024.7.0
 xarray-dataclasses==1.9.1
 xarray-datatree==0.0.15
